Update gitignore to exclude passwords

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
-pw.txt
-copyToStick/devices/rasjam_*
+pw*.txt
+copyToStick/devices/rasjam*
 copyToStick/config/general-config.conf
 copyToStick/fromServer/sshKey/*.pub
+
