Added automatic updates

--- a/.gitignore
+++ b/.gitignore
@@ -2,5 +2,5 @@ pw*.txt
 copyToStick/devices/rasjam*
 copyToStick/config/general-config.conf
 copyToStick/fromServer/sshKey/*.pub
-copyToStick/files/Jamulus/*
+copyToStick/files/Jamulus/Jamulus
 copyToStick/config/jackd/jackdrc
